@@ -48,7 +48,7 @@ struct aim_tlvlist_t *aim_readtlvchain(u_char *buf, int maxlen)
 		cur->tlv->length = length;
 		cur->tlv->value = (u_char *)malloc(length*sizeof(u_char));
 		memcpy(cur->tlv->value, buf+pos, length);
-	      
+
 		cur->next = list;
 		list = cur;
 	      }
